@@ -1,7 +1,7 @@
  OmegaT 2.6.3 update 7
 ----------------------------------------------------------------------
    0 Enhancement
-   1 Bug fix
+   2 Bug fixes
    0 Localisation update
 ----------------------------------------------------------------------
 2.6.3 update 7 vs. 2.6.3 update 6
@@ -10,6 +10,9 @@
 
   - Word plugin causes weird inline code in OmegaT
   https://sourceforge.net/p/omegat/bugs/645/
+
+  - NullPointerException when loading project with HHC files 
+  https://sourceforge.net/p/omegat/bugs/651/
 
 ----------------------------------------------------------------------
  OmegaT 2.6.3 update 6
